--- a/.github/workflows/notifications.yaml
+++ b/.github/workflows/notifications.yaml
@@ -21,5 +21,16 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_COLOR: 'danger'
-          SLACK_MESSAGE: 'The GitHub Action has failed!'
-          SLACK_TITLE: 'Failure Notification'
+          SLACK_MESSAGE: |
+            *Repository*: ${{ github.repository }}
+            *Event Name*: ${{ github.event_name }}
+            *Branch*: ${{ github.ref }}
+            *Commit Message*: ${{ github.event.head_commit.message }}
+            *Actor*: ${{ github.actor }}
+            *Workflow*: ${{ github.workflow }}
+            *Job Name*: ${{ github.job }}
+            *Run Number*: ${{ github.run_number }}
+            *Run ID*: ${{ github.run_id }}
+            *Failed Step*: 'Example Step' # Adjust based on your workflow
+          SLACK_TITLE: 'GitHub Action Failed'
+
