--- a/.github/workflows/notifications.yaml
+++ b/.github/workflows/notifications.yaml
@@ -23,14 +23,12 @@ jobs:
           SLACK_COLOR: 'danger'
           SLACK_MESSAGE: |
             *Repository*: ${{ github.repository }}
-            *Event Name*: ${{ github.event_name }}
+            *Workflow Run*: ${{ github.workflow }}
             *Branch*: ${{ github.ref }}
-            *Commit Message*: ${{ github.event.head_commit.message }}
+            *Commit*: ${{ github.sha }}
             *Actor*: ${{ github.actor }}
-            *Workflow*: ${{ github.workflow }}
-            *Job Name*: ${{ github.job }}
-            *Run Number*: ${{ github.run_number }}
-            *Run ID*: ${{ github.run_id }}
-            *Failed Step*: 'Example Step' # Adjust based on your workflow
-          SLACK_TITLE: 'GitHub Action Failed'
+            *Failed Job*: ${{ github.job }}
+            *Details*: 
+            <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|View Workflow Run>
+          SLACK_TITLE: '[${{ github.repository }}] Run failed: ${{ github.workflow }} - ${{ github.ref_name }} (${{ github.sha }})'
 
