--- a/.github/workflows/notifications.yaml
+++ b/.github/workflows/notifications.yaml
@@ -30,5 +30,5 @@ jobs:
             *Failed Job*: ${{ github.job }}
             *Details*: 
             <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|View Workflow Run>
-          SLACK_TITLE: '[${{ github.repository }}] Run failed: ${{ github.workflow }} - ${{ github.ref_name }} (${{ github.sha }})'
+          SLACK_TITLE: 'GitHub Action Failed'
 
